kubernetes/apps/apps/matrix/synapse/apps/synapse/deployment.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/instrumenta/kubernetes-json-schema/master/v1.14.0/deployment.json
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matrix-synapse
  name: matrix-synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix-synapse
  template:
    metadata:
      annotations:
        prometheus.io/path: /_synapse/metrics
        prometheus.io/port: '9090'
        prometheus.io/scrape: 'true'
      labels:
        app: matrix-synapse
    spec:
      # shareProcessNamespace: true
      containers:
        - command:
            - sh
            - -c
            #- cp /synapse/config/homeserver.yaml /data/homeserver.yaml && sleep 8400000s 
            - curl https://raw.githubusercontent.com/devture/matrix-synapse-shared-secret-auth/master/shared_secret_authenticator.py -o /usr/local/lib/python3.11/site-packages/shared_secret_authenticator.py && cp /synapse/config/homeserver.yaml /data/homeserver.yaml && ./start.py generate && chmod +r -R /bridges &&./start.py
            #- /start.py
          # - command:
          #     - sh
          #     - -c
          #     - sleep 84000s
          # - command: # As an example of how to add rest_auth to the container without requiring a separate image
          #     - sh
          #     - -c
          #     - |
          #       curl https://raw.githubusercontent.com/kamax-matrix/matrix-synapse-rest-password-provider/master/rest_auth_provider.py -o /usr/local/lib/python2.7/site-packages/rest_auth_provider.py
          #       /matrix-synapse
          image: matrixdotorg/synapse:v1.126.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /_matrix/client/versions
              port: 8008
              scheme: HTTP
            initialDelaySeconds: 120
          name: matrix-synapse
          readinessProbe:
            httpGet:
              path: /_matrix/client/versions
              port: 8008
              scheme: HTTP
            initialDelaySeconds: 10
          resources:
            requests:
              memory: '1Mi'
              cpu: '1m'
            limits:
              memory: '6Gi'
          volumeMounts:
            - mountPath: /data
              name: matrix-synapse-data
            - mountPath: /synapse/config
              name: matrix-synapse-config
            - mountPath: /bridges
              name: matrix-bridges
        - name: mautrix-bridge-whatsapp
          command:
            - sh
            - -c
            - cp -n -p /config/config.yaml /data/config.yaml && if [ -d /data/registration.yaml ] ; then chmod 0700 /data/registration.yaml ; fi && /docker-run.sh
          image: dock.mau.dev/mautrix/whatsapp:v0.11.2
          resources:
            requests:
              memory: '1Mi'
              cpu: '1m'
            limits:
              memory: '6Gi'
              cpu: '2500m'
          volumeMounts:
            - mountPath: /data
              name: matrix-bridges
              subPath: whatsapp
            - mountPath: /config/config.yaml
              name: matrix-bridge-whatsapp-config
              subPath: config.yaml
      restartPolicy: Always
      securityContext:
        fsGroup: 0
        runAsGroup: 0
        runAsUser: 0
      volumes:
        - name: matrix-synapse-data
          persistentVolumeClaim:
            claimName: matrix-synapse-data
        # - name: matrix-synapse-data
        #   emptyDir: {}
        # - name: matrix-synapse-keys
        #   secret:
        #     secretName: matrix-synapse-keys
        - name: matrix-synapse-config
          configMap:
            name: matrix-synapse
            defaultMode: 0777
        - name: matrix-bridges
          persistentVolumeClaim:
            claimName: matrix-bridges-data
        - name: sync-oneway
          secret:
            secretName: sync-oneway
            defaultMode: 0777
        - name: prepare-data
          secret:
            secretName: prepare-data
            defaultMode: 0777
        - name: matrix-bridge-whatsapp-config
          configMap:
            name: matrix-bridge-whatsapp-config
status: {}
#to get the key "curl -XPOST -d '{"type":"m.login.password","identifier":{"type": "m.id.user", "user": "<username>"},"password":"<pass>","initial_device_display_name":"a fancy bridge"}' https://matrix.cloud.icylair.com/_matrix/client/v3/login"
