kubernetes/apps/apps/matrix/synapse/apps/synapse/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-synapse
  annotations:
    dns.alpha.kubernetes.io/external: 'matrix-synapse.apps.svc.cluster.local'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
    - name: https
      protocol: TCP
      port: 8448
      targetPort: 8448
  selector:
    app: matrix-synapse
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: matrix-synapse-replication
spec:
  ports:
    # Needs listeners added to the Synapse config as well, according to the
    # workers documentation, if workers are to be used
    - name: replication
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: http-replication
      protocol: TCP
      port: 9093
      targetPort: 9093
  selector:
    app: matrix-synapse
  type: ClusterIP
---
apiVersion: v1 #unused but for future purpuse
kind: Service
metadata:
  name: matrix-synapse-federation
  annotations:
    dns.alpha.kubernetes.io/external: 'matrix-synapse.apps.svc.cluster.local'
  labels:
    app: matrix-synapse-federation
spec:
  # loadBalancerIP: 10.0.0.239
  ports:
    - name: https
      protocol: TCP
      port: 8448
      targetPort: 8448
  selector:
    app: matrix-synapse
  type: LoadBalancer
---
apiVersion: v1 #unused but for future purpuse
kind: Service
metadata:
  name: &name matrix-synapse-bridges
  # annotations:
  #   dns.alpha.kubernetes.io/external: 'matrix-synapse-bridges.apps.svc.cluster.local'
  labels:
    app: *name
spec:
  # loadBalancerIP: 10.0.0.239
  ports:
    - name: whatsapp
      port: 29318
      targetPort: 29318
    - name: meta
      port: 29319
      targetPort: 29319
  selector:
    mautrix-bridge: "true"
  type: ClusterIP
