kubernetes/apps/apps/matrix/synapse/apps/synapse/whatsapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mautrix-bridge-whatsapp
  annotations:
    dns.alpha.kubernetes.io/external: mautrix-bridge-whatsapp.apps.svc.cluster.local
spec:
  selector:
    app: mautrix-bridge-whatsapp
  ports:
    - name: http
      targetPort: 29318
      port: 29318
